CHANGELOG RoundCube Webmail
---------------------------

2008/05/05 (alec)
----------
- Installer: encode special characters in DB username/password (#1485042)
- Do charset conversion also for from/to column on messages list
- Fix management of folders with national characters in names (#1485036, #1485001)

2008/05/02 (alec)
----------
- Updated MDB2 package to version 2.5.0b1
- Updated MDB2 pgsql, mysql, mysqli, sqlite drivers to version 1.5.0b1
- Updated MDB2 mssql driver to version 1.3.0b1
- Fixed identities saving when using MDB2 pgsql driver (#1485032)

2008/05/01 (alec)
----------
- Fix BCC header reset (#1484997)

2008/04/30 (thomasb)
----------
- Introduce new application class 'rcmail' and get rid of some global vars

2008/04/29 (alec)
----------
- improved messages list performance - patch from Justin Heesemann

2008/04/23 (alec)
----------
- Append skin_path to images location only when it starts 
  with '/' sign (#1484859)

2008/04/20 (estadtherr)
----------
- fix parse_attrib_string to handle unquoted values, which fixes
  display issues with HTML messages that do not quote attributes

2008/04/17 (alec)
----------
- Fix IMAP response in message body when message has no body (#1484964)
- Updated PEAR::Auth_SASL to 1.0.2
- Fix non-RFC dates formatting (#1484901)

2008/04/16 (estadtherr)
----------
- Fix mail sending with new TinyMCE

2008/04/16 (alec)
----------
- Fix typo in set_charset() (#1484991)
- Decode entities when inserting HTML signature to plain text message (#1484990)

2008/04/15 (estadtherr)
----------
- HTML editing is now working with PHP5 updates and TinyMCE v3.0.6
- fix signature loading on Windows (#1484545)
- add language support to HTML editing (#1484862)

2008/04/15 (alec)
----------
- Fix remove signature when replying (#1333167)
- Fix problem with line with a space at the end (#1484916)
- Don't send set_env() in ajax response when env array is empty
- Fix <!DOCTYPE> tag filtering (#1484391)
- Fix <?xml> tag filtering (#1484403)
 