@@ -19,7 +19,10 @@
 
 */
 
-if (($cid = get_input_value('_cid', RCUBE_INPUT_POST)) && preg_match('/^[0-9]+(,[0-9]+)*$/', $cid))
+if (($cid = get_input_value('_cid', RCUBE_INPUT_POST)) &&
+    (preg_match('/^[0-9]+(,[0-9]+)*$/', $cid) ||
+     preg_match('/^[a-zA-Z0-9=]+(,[a-zA-Z0-9=]+)*$/', $cid))
+   )
   {
   $deleted = $CONTACTS->delete($cid);
   if (!$deleted)
